# WindMillCounter

./: CMakeLists.txt  README.md  WMObject.cxx  WMObject.h  WindMillCounter.cxx  WindMillCounter.h  main.cxx
cmake/: WindMillCounter-QtCreator-OSX-dev.sh.in  WindMillCounter-VS2012-64-dev.bat.in
